# kubernetes-fastAPI-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
k8s/fastapi/: deployment.yaml  pv.yaml  pvc.yaml  sc.yaml  secret.yaml  service.yaml
k8s/namespace/: ns.yaml
kubernetes_fastapi_test_task/: main.py
kubernetes_fastapi_test_task/api/: endpoints.py
kubernetes_fastapi_test_task/core/: settings.py
storage_service/: main.py
storage_service/api/: endpoints.py  routers.py
storage_service/core/: log.py
storage_service/services/: file_handlers.py
storage_service/settings/: core.py  log.py  metrics.py  probes.py  scheduler.py
storage_service/tasks/: background_task.py  run_scheduler.py
storage_service/tests/: conftest.py
storage_service/tests/test_api/: conftest.py  test_metrics.py  test_objects.py  test_probes.py
storage_service/tests/test_services/: conftest.py  test_file_handlers.py
