[tool.poetry]
name = "kubernetes-fastapi-test-task"
version = "0.1.0"
description = "Сервис хранилище JSON-объектов, предназначенный для работы в облачной среде Kubernetes"
authors = ["Maxim Barannikov <barannikov.mu@gmail.com>"]
readme = "README.md"
packages = [{include = "storage_service"}]


[virtualenvs]
in-project = true
path = ".venv"


[tool.poetry.scripts]
start = "storage_service.main:start"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.101.0"
uvicorn = "0.23.2"
environs = "^9.5.0"
structlog = "^23.1.0"
pydantic = "^2.1.1"
prometheus-fastapi-instrumentator = "^6.1.0"
fastapi-healthchecks = "^1.0.7"


[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"


[tool.ruff]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade  
    "S",   # bandit
]
ignore = [
    "E501",  # disabled control on the length of the string
    "Q000",  # single quotes are allowed
    "S104",  # possible binding to all interfaces
]


[tool.black]
line-length = 120
skip-string-normalization = '1'


[tool.mypy]
python_version = '3.11'
show_error_codes = true
ignore_missing_imports = true
plugins = ['pydantic.mypy']
exclude = [
    'test',
    'conftest',
]


[tool.pydantic-mypy]
warn_untyped_fields = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
